# CrossAlpha

./: .gitignore  COLAB_SETUP.md  README.md  pyproject.toml  requirements-colab.txt
configs/: base.toml  colab.toml  data_sources.toml
scripts/: build_features.py  build_labels.py  generate_recommendations.py  ingest_data.py  run_backtest.py  run_pipeline.py  run_validation.py  train_models.py
src/crossalpha/: __init__.py  cli.py  config.py  logging_utils.py
src/crossalpha/backtest/: simulator.py
src/crossalpha/data/: __init__.py  pipeline.py  quality.py  storage.py  universe.py
src/crossalpha/data/adapters/: __init__.py  base.py  fred.py  sec.py  wikipedia.py  yahoo.py
src/crossalpha/engine/: recommender.py
src/crossalpha/features/: catalog.py  engine.py
src/crossalpha/labels/: __init__.py  engine.py
src/crossalpha/models/: __init__.py  base.py  baseline.py  ranker.py  training.py
src/crossalpha/reports/: reporting.py
src/crossalpha/utils/: dates.py  http.py  io.py  math.py
src/crossalpha/validation/: __init__.py  metrics.py  splits.py  walkforward.py
tests/: conftest.py  test_backtest.py  test_data_quality.py  test_http_headers.py  test_integration.py  test_leakage.py  test_pipeline_filters.py  test_recent_vendor_filter.py  test_validation.py  test_vendor_enrichment_filter.py  test_wikipedia_adapter.py
