[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossalpha"
version = "0.1.0"
description = "Cross-sectional stock ranking, validation, and recommendation engine for U.S. equities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex Chat" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.1",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "yfinance>=0.2.54",
  "lxml>=5.2",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
crossalpha = "crossalpha.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
